# PyMini

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
benchmarks/: bench_basic.py
docs/: ARCHITECTURE.md  MILESTONES.md
src/pymini/: __init__.py  __main__.py  api.py  pipeline.py  version.py
src/pymini/compiler/: __init__.py  bytecode.py  compiler.py
src/pymini/debug/: __init__.py  debugger.py
src/pymini/gc/: __init__.py  simulator.py
src/pymini/optimizer/: __init__.py  ast_optimizer.py
src/pymini/parser/: __init__.py  ast_parser.py  handwritten.py  lexer.py
src/pymini/repl/: __init__.py  console.py
src/pymini/runtime/: __init__.py  builtins.py  errors.py  evaluator.py  objects.py  scope.py
src/pymini/stdlib/: __init__.py  modules.py
src/pymini/vm/: __init__.py  machine.py
tests/: test_assert.py  test_builtins.py  test_builtins_extra.py  test_bytecode.py  test_cli.py  test_engine_conformance.py  test_evaluator.py  test_gc.py  test_generators.py  test_kwargs.py  test_lambda.py  test_language_features.py  test_optimizer.py  test_parser.py  test_repl.py  test_runtime_semantics.py  test_stdlib_extra.py  test_trace_debug.py  test_version.py  test_vm.py  test_vm_ops.py
