[tool.poetry]
name = "pymini"
version = "0.1.0"
description = "A production-quality mini-Python interpreter built as an educational VM project."
authors = ["PyMini Contributors <dev@example.com>"]
readme = "README.md"
packages = [{ include = "pymini", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.43"
pygments = "^2.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
pymini = "pymini.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B904"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pymini"]

