[tool.poetry]
name = "pymini"
version = "0.1.0"
description = "A typed educational mini-Python interpreter with evaluator and bytecode VM engines."
authors = ["Sebastian Forbes"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pymini", from = "src" }]
keywords = ["interpreter", "compiler", "bytecode", "virtual-machine", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/Sebby1770/PyMini"
Repository = "https://github.com/Sebby1770/PyMini"
Issues = "https://github.com/Sebby1770/PyMini/issues"
Changelog = "https://github.com/Sebby1770/PyMini/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.43"
pygments = "^2.17.2"

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
twine = "^5.0.0"

[tool.poetry.scripts]
pymini = "pymini.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=pymini --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B904"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pymini"]

[[tool.mypy.overrides]]
module = ["prompt_toolkit", "prompt_toolkit.*", "pygments.lexers.python"]
ignore_missing_imports = true
